--- a/jenelleteaches-android-okhttpexample-c51cfbee9901/app/src/main/res/layout/activity_main.xml
+++ b/jenelleteaches-android-okhttpexample-c51cfbee9901/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,13 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GET JSON"
+        android:text="GET Distance"
         android:onClick="getJSONPressed"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textSize="25sp"
-        android:id="@+id/textview1"
-
-         />
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="460dp" />
 
 
 </LinearLayout>
